# ds-project-template

./:  .pre-commit-config.yaml  .dockerignore  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tool-commands.md  tox.ini
