[tool.poetry]
name = "ds-project-template"
version = "0.1.0"
description = ""
authors = ["Robin Kühling <rbnkhlng.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
tox = "^3.25.1"
mkdocs = "^1.3.1"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
flake8-docstrings = "^1.6.0"
pytest-sugar = "^0.9.5"
mkdocs-material = "^8.3.9"
mkdocstrings = "^0.19.0"
python-dotenv = "^0.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
