[tool.poetry]
name = "ds-project-template"
version = "0.1.0"
description = "Project template for data science projects with python."
authors = ["Robin Kühling <rbnkhlng.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
pytest = "^7.2.0"
pytest-sugar = "^0.9.5"
tox = "^3.27.0"
pre-commit = "^2.20.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
